--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.7.1",
+    "@react-native-firebase/auth": "^21.7.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "expo": "~52.0.27",
+    "expo-build-properties": "~0.13.2",
+    "expo-dev-client": "~5.0.10",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "latest"
   },
   "private": true
 }
