--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "dependencies": {
     "@react-native-firebase/app": "^21.7.1",
     "@react-native-firebase/auth": "^21.7.1",
+    "@react-native-firebase/storage": "^21.7.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "expo": "~52.0.27",
     "expo-build-properties": "~0.13.2",
     "expo-dev-client": "~5.0.10",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.6",
+    "expo-image-picker": "~16.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
